..F....... [ZBX-10435] removed labels inside form-separator; fixed btn-link alignment when there are no inputs
git-svn-id: svn://svn.zabbix.com/branches/dev@58974 f4e7fd02-d210-4e34-a1e0-d4093fb66cc2

--- a/ZBX-10435/sass/stylesheets/sass/screen.scss
+++ b/ZBX-10435/sass/stylesheets/sass/screen.scss
@@ -1369,15 +1369,6 @@ footer {
 		vertical-align: top;
 	}
 
-	label {
-		display: inline-block;
-		padding: 4px 0;
-	}
-
-	.btn-link {
-		margin: 5px 0 0 0;
-	}
-
 	.radio-segmented {
 		margin: 4px 0 0 0;
 
